[gd_scene load_steps=2 format=3 uid="uid://cs6hu2tv3vcej"]

[ext_resource type="Script" uid="uid://d2el384m3cb7k" path="res://scenes/ui/cultivation_method_ui.gd" id="1_yukvw"]

[node name="CultivationMethodUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yukvw")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tàng Kinh Các"
horizontal_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Công Pháp Đã Học"

[node name="ScrollContainer" type="ScrollContainer" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MethodListContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MethodDetailsPanel" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MethodNameLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/MethodDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Chọn một công pháp"

[node name="MethodRankLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/MethodDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Phẩm chất: "

[node name="MethodDescriptionLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/MethodDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Mô tả ... "

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/MethodDetailsPanel"]
layout_mode = 2

[node name="EffectsTitleLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/MethodDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Hiệu Quả Tu Luyện: "

[node name="EffectsContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/MethodDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ActivateButton" type="Button" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/MethodDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Bắt Đầu Tu Luyện"

[node name="CloseButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -49.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Đóng"

[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/HSplitContainer/MethodDetailsPanel/ActivateButton" to="." method="_on_activate_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
